2008-09-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (ensure-unique-name): New function and menu
	entry.
	(ensure-unique-number): New function and menu entry.

2008-09-22  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-nw-hooks.lisp (named-frame-nw-hook): New new window
	hook: open the next window in a named frame.
	(numbered-frame-nw-hook): New new window hook: open the next
	window in a numbered frame.

	* src/clfswm-query.lisp (query-string): Grab the keyboard in all
	cases. So query-string can be called even in the main mode.

	* src/clfswm-internal.lisp (show-all-children): Do not raise a
	child by default => far less flickering.

2008-09-19  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/bindings-second-mode.lisp: Bind "t" to tile-current-frame.

	* src/menu-def.lisp: Change key binding for the CLFSWM menu
	entry.

	* src/xlib-util.lisp (xgrab-pointer): Handle the case where cursor
	is nil. (workaround on some CLX implementation).

2008-09-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/menu-def.lisp: Add a menu to set a focus policy for all
	frames.

	* src/clfswm-util.lisp (set-focus-policy-generic-for-all)
	(all-frames-set-*-focus-policy): Set a focus policy for all
	frames.

	* src/clfswm.lisp (handle-enter-notify): sloppy-select
	mode. Select a child and its parents on mouse over.

2008-09-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (handle-enter-notify): Add a sloppy strict focus
	policy -> Sloppy focus only for windows in the current frame.
	(main-unprotected): Exit clfswm on init error (ie: when another
	window manager is running).

	* src/clfswm-util.lisp (reset-clfswm): New function.

2008-09-02  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-menu.lisp (init-menu): New function.

	* src/clfswm-util.lisp (reload-clfswm): New function to reload
	CLFSWM.
	(exit-clfswm): Rename quit-clfswm to exit-clfswm.
